test/corpus/struct.txt
===
Simple struct
===

Struct tUSAddress
    String sStreet
    String sCity
    String sState
    Integer iZipCode
End_Struct

---

(source_file
  (struct_declaration
    (struct_header
      (keyword)
      name: (identifier))
    (struct_member
      (system_typedecl
        name: (system_type))
      (identifier))
    (struct_member
      (system_typedecl
        name: (system_type))
      (identifier))
    (struct_member
      (system_typedecl
        name: (system_type))
      (identifier))
    (struct_member
      (system_typedecl
        name: (system_type))
      (identifier))
    (struct_footer
      (keyword))))
