test/corpus/variables.txt
===
Global variable
===

Global_Variable Integer giMyGlobal

---

(source_file
  (global_variable_declaration
    (keyword)
    (system_typedecl
      (system_type))
    (identifier)))

===
Local variable
===

Procedure TestIt
    Integer iMyLocalVar
End_Procedure

---

(source_file
  (procedure_definition
    (procedure_header
      (keyword)
      (identifier))
    (variable_declaration
      (system_typedecl
        (system_type))
      (identifier))
    (procedure_footer
      (keyword))))

===
Multiple local variables on same line
===

Procedure TestIt
    Integer iMyLocalVar iMyOtherLocalVar iMyThirdLocalVar
End_Procedure

---

(source_file
  (procedure_definition
    (procedure_header
      (keyword)
      (identifier))
    (variable_declaration
      (system_typedecl
        (system_type))
      (identifier)
      (identifier)
      (identifier))
    (procedure_footer
      (keyword))))
